feat(auth): add swagger docs
